add SQLite support with schema, implement event JDBC writer and cleaner, and enhance server shutdown handling